--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
     database: nitanation_production
     username: nitanation
     password: <%= ENV["NITANATION_DATABASE_PASSWORD"] %>
